# PRECIS

./: README.md
.github/workflows/: ai-engine-ci.yml  backend-ci.yml  (+2 more)
alembic/: env.py  script.py.mako
cv-engine/: alert_dispatcher.py  dashboard_payload_builder.py  event_publisher.py  fusion_engine.py  heatmap_streamer.py  init__.py  nats_subscriber.py  passive_outstroke_predictor.py  pipeline_orchestrator.py  report_generator.py  websocket_stream.py
cv_engine/: api_client.py  criticality_engine.py  database_writer.py
deployment/: README.md  deployment_guide.md
gateway/: auth.py  main.py  middleware.py  routes.py  schemas.py  services.py  websocket_gateway.py
load_testing/: api_load_test.py  inference_benchmark.py  redis_benchmark.py  streaming_benchmark.py  websocket_stress.py
observability/: alert_manager.py  distributed_tracing.py  gpu_monitor.py  inference_monitor.py  stream_monitor.py
optimization/: cuda_profiler.py  fp16_optimizer.py  onnx_exporter.py  tensorrt_converter.py
orchestration/: distributed_lock_manager.py  pipeline_scheduler.py  recovery_manager.py  state_sync_engine.py  workflow_engine.py
scripts/: dev.py
security_hardening/: encrypted_storage.py  intrusion_detector.py  rate_limit_enforcer.py  secrets_manager.py  websocket_guard.py
services/api-gateway/: main.py  pyproject.toml
system_integration/: ai_to_backend.py  backend_to_websocket.py  cv_to_streaming.py  orchestration_manager.py  pipeline_health_manager.py  predictive_pipeline.py  streaming_to_backend.py
tests/: test_api.py  test_streaming_pipeline.py  test_websocket.py
(+249 files in other folders)
